--- a/dwm/dwm-6.2
+++ b/dwm/dwm-6.2
@@ -11,7 +11,7 @@ static const char col_gray1[]       = "#222222";
 static const char col_gray2[]       = "#444444";
 static const char col_gray3[]       = "#bbbbbb";
 static const char col_gray4[]       = "#eeeeee";
-static const char col_bg[]          = "#592139"; //"#3b2d54";
+static const char col_bg[]          = "#3b2d54";//"#592139"; //;
 static const char *colors[][3]      = {
 	/*               fg         bg         border   */
 	[SchemeNorm] = { col_gray3, col_gray1, col_gray2 },
@@ -21,14 +21,14 @@ static const char *colors[][3]      = {
 
 /* tagging */
 static const char *tags[] = { "", "ﲵ", "", "", "﫛", "", "",  ""};
-#define TAG_WWW   1 << 0
-#define TAG_TERM  1 << 1
-#define TAG_DEV   1 << 2
-#define TAG_VIR   1 << 3
-#define TAG_SYS   1 << 4
-#define TAG_MUSIC 1 << 5
-#define TAG_SPEAK 1 << 6
-#define TAG_OTHER 1 << 7
+#define TAG_WWW   (1 << 0)
+#define TAG_TERM  (1 << 1)
+#define TAG_DEV   (1 << 2)
+#define TAG_VIR   (1 << 3)
+#define TAG_SYS   (1 << 4)
+#define TAG_MUSIC (1 << 5)
+#define TAG_SPEAK (1 << 6)
+#define TAG_OTHER (1 << 7)
 
 static const Rule rules[] = {
 	/* xprop(1):
